// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefundOrderModal should render Refund Order - ERROR popup 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-3-desc"
    aria-labelledby="modal-3-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog medium scrollableDialog"
    >
      <div
        class="modalContent scrollableContent"
      >
        <div
          class="wrapper"
        >
          <div>
            <div
              class="title"
              id="modal-3-title"
            >
              Refund Order #123
            </div>
            <div
              class="subtitle"
            />
          </div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 material-icons icon ui-iconbutton-wrapper-b819 ui-iconbutton-medium-b819 ui-button-ghost-cef1 ui-button-secondary-cef1"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                aria-hidden="true"
                class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486 material-icons"
              >
                close
              </i>
            </span>
          </button>
        </div>
        <div
          class="formBody"
        >
          <div
            class="flex"
          >
            <div
              aria-checked="true"
              aria-label="Entire order"
              class="wrapper selected previewRadioButtonWrapper"
              role="radio"
              tabindex="0"
            >
              <div>
                <label
                  class="ui-label-label-a11c label"
                  for="radio-button-Entire order"
                >
                  <input
                    checked=""
                    class="input"
                    id="radio-button-Entire order"
                    role="checkbox"
                    tabindex="-1"
                    type="radio"
                  />
                  Entire order
                </label>
              </div>
            </div>
            <div
              aria-checked="false"
              aria-label="Manual amount"
              class="wrapper previewRadioButtonWrapper"
              role="radio"
              tabindex="0"
            >
              <div>
                <label
                  class="ui-label-label-a11c label"
                  for="radio-button-Manual amount"
                >
                  <input
                    class="input"
                    id="radio-button-Manual amount"
                    role="checkbox"
                    tabindex="-1"
                    type="radio"
                  />
                  Manual amount
                </label>
              </div>
            </div>
          </div>
          <div
            class="modalSection"
          >
            <p
              class="modalSectionHeader"
            >
              Refundable items
            </p>
          </div>
          <div
            class="modalSection"
          >
            <p
              class="modalSectionHeader"
            >
              Refund method
            </p>
            <p
              class=""
            >
              Select items to refund.
            </p>
          </div>
          <div
            class="modalSectionSmall"
          >
            <p
              class="modalSectionHeader"
            >
              Other
            </p>
            <label
              class="ui-label-label-a11c label"
              for="refundReason"
            >
              Reason for refund
            </label>
            <div
              class="textAreaWrapper"
            >
              <textarea
                aria-describedby="refundReason-caption"
                class="textarea"
                id="refundReason"
                maxlength="1000"
                name="refundReason"
                rows="1"
                style="height: 2px;"
              />
              <div
                class="caption"
                id="refundReason-caption"
              >
                Maximum length is 1000 characters.
              </div>
            </div>
            <label
              class="ui-label-label-a11c label smallSpacingMarginTop"
              for="newOrderStatus"
            >
              New status
            </label>
            <div
              class="wrapper"
              id="newOrderStatus"
              role="combobox"
              tabindex="0"
            >
              <div
                class="inputWrapper"
              >
                <div
                  class="input isGreyed"
                >
                  Select order status
                </div>
                <i
                  class="affix suffix toggle material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <p
              class="caption"
            >
              If the field is left empty, Refunded or Partially Refunded status will be assigned to order.
            </p>
          </div>
        </div>
        <div
          class="wrapper modalFooterWrapper"
        >
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1"
            tabindex="0"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              Cancel
            </span>
          </button>
          <button
            aria-disabled="true"
            class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
            tabindex="0"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              Refund €0.00
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r3:"
  />
  <div
    aria-describedby="modal-5-desc"
    aria-labelledby="modal-5-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog small"
    >
      <div
        class="modalContent"
      >
        <div
          class="wrapper"
        >
          <div>
            <div
              class="title"
              id="modal-5-title"
            >
              Error
            </div>
            <div
              class="subtitle"
            />
          </div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 material-icons icon ui-iconbutton-wrapper-b819 ui-iconbutton-medium-b819 ui-button-ghost-cef1 ui-button-secondary-cef1"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                aria-hidden="true"
                class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486 material-icons"
              >
                close
              </i>
            </span>
          </button>
        </div>
        <div
          class="wrapper"
          id="modal-5-desc"
        >
          An unexpected error occurred. Please try again later.
        </div>
        <div
          class="wrapper wrapper"
        >
          <div
            class="actions"
          >
            <div
              class="childWrapper"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Got it
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`RefundOrderModal should render Refund Order - OK 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-1-desc"
    aria-labelledby="modal-1-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog medium scrollableDialog"
    >
      <div
        class="modalContent scrollableContent"
      >
        <div
          class="wrapper"
        >
          <div>
            <div
              class="title"
              id="modal-1-title"
            >
              Refund Order #123
            </div>
            <div
              class="subtitle"
            />
          </div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 material-icons icon ui-iconbutton-wrapper-b819 ui-iconbutton-medium-b819 ui-button-ghost-cef1 ui-button-secondary-cef1"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                aria-hidden="true"
                class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486 material-icons"
              >
                close
              </i>
            </span>
          </button>
        </div>
        <div
          class="formBody"
        >
          <div
            class="flex"
          >
            <div
              aria-checked="true"
              aria-label="Entire order"
              class="wrapper selected disabled previewRadioButtonWrapper"
              role="radio"
              tabindex="0"
            >
              <div>
                <label
                  class="ui-label-label-a11c ui-label-isdisabled-a11c label"
                  for="radio-button-Entire order"
                >
                  <input
                    checked=""
                    class="input"
                    disabled=""
                    id="radio-button-Entire order"
                    role="checkbox"
                    tabindex="-1"
                    type="radio"
                  />
                  Entire order
                </label>
              </div>
            </div>
            <div
              aria-checked="false"
              aria-label="Manual amount"
              class="wrapper disabled previewRadioButtonWrapper"
              role="radio"
              tabindex="0"
            >
              <div>
                <label
                  class="ui-label-label-a11c ui-label-isdisabled-a11c label"
                  for="radio-button-Manual amount"
                >
                  <input
                    class="input"
                    disabled=""
                    id="radio-button-Manual amount"
                    role="checkbox"
                    tabindex="-1"
                    type="radio"
                  />
                  Manual amount
                </label>
              </div>
            </div>
          </div>
          <div
            class="modalSection"
          >
            <p
              class="modalSectionHeader"
            >
              Refundable items
            </p>
            <svg
              class="ui-loadingspinner-spinner-fc79 ui-loadingspinner-gloom-fc79 ui-loadingspinner-medium-fc79 spinner"
              data-name="loading-spinner"
              preserveAspectRatio="xMidYMid meet"
              role="status"
              viewBox="0 0 20 20"
            >
              <circle
                class="ui-loadingspinner-dot-fc79"
                cx="10"
                cy="10"
                fill="none"
                r="6"
                stroke-width="2"
              />
              <circle
                class="ui-loadingspinner-circle-fc79"
                cx="10"
                cy="10"
                fill="none"
                r="6"
                stroke-width="2"
              />
              <span
                class="sr-only"
              >
                Loading...
              </span>
            </svg>
          </div>
          <div
            class="modalSection"
          >
            <p
              class="modalSectionHeader"
            >
              Refund method
            </p>
            <div
              class="spinnerWrapper"
            >
              <svg
                class="ui-loadingspinner-spinner-fc79 ui-loadingspinner-gloom-fc79 ui-loadingspinner-medium-fc79 spinner"
                data-name="loading-spinner"
                preserveAspectRatio="xMidYMid meet"
                role="status"
                viewBox="0 0 20 20"
              >
                <circle
                  class="ui-loadingspinner-dot-fc79"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <circle
                  class="ui-loadingspinner-circle-fc79"
                  cx="10"
                  cy="10"
                  fill="none"
                  r="6"
                  stroke-width="2"
                />
                <span
                  class="sr-only"
                >
                  Loading...
                </span>
              </svg>
            </div>
            <p
              class="disabled"
            >
              Select items to refund.
            </p>
          </div>
          <div
            class="modalSectionSmall"
          >
            <p
              class="modalSectionHeader"
            >
              Other
            </p>
            <label
              class="ui-label-label-a11c label"
              for="refundReason"
            >
              Reason for refund
            </label>
            <div
              class="textAreaWrapper"
            >
              <textarea
                aria-describedby="refundReason-caption"
                class="textarea"
                disabled=""
                id="refundReason"
                maxlength="1000"
                name="refundReason"
                rows="1"
                style="height: 2px;"
              />
              <div
                class="caption"
                id="refundReason-caption"
              >
                Maximum length is 1000 characters.
              </div>
            </div>
            <label
              class="ui-label-label-a11c label smallSpacingMarginTop"
              for="newOrderStatus"
            >
              New status
            </label>
            <div
              class="wrapper"
              id="newOrderStatus"
              role="combobox"
              tabindex="-1"
            >
              <div
                class="inputWrapper isDisabled"
              >
                <div
                  class="input isGreyed"
                >
                  Select order status
                </div>
                <i
                  class="affix suffix toggle material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <p
              class="caption"
            >
              If the field is left empty, Refunded or Partially Refunded status will be assigned to order.
            </p>
          </div>
        </div>
        <div
          class="wrapper modalFooterWrapper"
        >
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1"
            tabindex="0"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              Cancel
            </span>
          </button>
          <button
            aria-disabled="true"
            class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
            tabindex="0"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              Refund €0.00
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r1:"
  />
</body>
`;

exports[`RefundOrderModal should render Refund Order - Too Many Requests ERROR popup 1`] = `
<body>
  <div />
  <div
    aria-describedby="modal-6-desc"
    aria-labelledby="modal-6-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog medium scrollableDialog"
    >
      <div
        class="modalContent scrollableContent"
      >
        <div
          class="wrapper"
        >
          <div>
            <div
              class="title"
              id="modal-6-title"
            >
              Refund Order #123
            </div>
            <div
              class="subtitle"
            />
          </div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 material-icons icon ui-iconbutton-wrapper-b819 ui-iconbutton-medium-b819 ui-button-ghost-cef1 ui-button-secondary-cef1"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                aria-hidden="true"
                class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486 material-icons"
              >
                close
              </i>
            </span>
          </button>
        </div>
        <div
          class="formBody"
        >
          <div
            class="flex"
          >
            <div
              aria-checked="true"
              aria-label="Entire order"
              class="wrapper selected previewRadioButtonWrapper"
              role="radio"
              tabindex="0"
            >
              <div>
                <label
                  class="ui-label-label-a11c label"
                  for="radio-button-Entire order"
                >
                  <input
                    checked=""
                    class="input"
                    id="radio-button-Entire order"
                    role="checkbox"
                    tabindex="-1"
                    type="radio"
                  />
                  Entire order
                </label>
              </div>
            </div>
            <div
              aria-checked="false"
              aria-label="Manual amount"
              class="wrapper previewRadioButtonWrapper"
              role="radio"
              tabindex="0"
            >
              <div>
                <label
                  class="ui-label-label-a11c label"
                  for="radio-button-Manual amount"
                >
                  <input
                    class="input"
                    id="radio-button-Manual amount"
                    role="checkbox"
                    tabindex="-1"
                    type="radio"
                  />
                  Manual amount
                </label>
              </div>
            </div>
          </div>
          <div
            class="modalSection"
          >
            <p
              class="modalSectionHeader"
            >
              Refundable items
            </p>
          </div>
          <div
            class="modalSection"
          >
            <p
              class="modalSectionHeader"
            >
              Refund method
            </p>
            <p
              class=""
            >
              Select items to refund.
            </p>
          </div>
          <div
            class="modalSectionSmall"
          >
            <p
              class="modalSectionHeader"
            >
              Other
            </p>
            <label
              class="ui-label-label-a11c label"
              for="refundReason"
            >
              Reason for refund
            </label>
            <div
              class="textAreaWrapper"
            >
              <textarea
                aria-describedby="refundReason-caption"
                class="textarea"
                id="refundReason"
                maxlength="1000"
                name="refundReason"
                rows="1"
                style="height: 2px;"
              />
              <div
                class="caption"
                id="refundReason-caption"
              >
                Maximum length is 1000 characters.
              </div>
            </div>
            <label
              class="ui-label-label-a11c label smallSpacingMarginTop"
              for="newOrderStatus"
            >
              New status
            </label>
            <div
              class="wrapper"
              id="newOrderStatus"
              role="combobox"
              tabindex="0"
            >
              <div
                class="inputWrapper"
              >
                <div
                  class="input isGreyed"
                >
                  Select order status
                </div>
                <i
                  class="affix suffix toggle material-icons"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <p
              class="caption"
            >
              If the field is left empty, Refunded or Partially Refunded status will be assigned to order.
            </p>
          </div>
        </div>
        <div
          class="wrapper modalFooterWrapper"
        >
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1"
            tabindex="0"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              Cancel
            </span>
          </button>
          <button
            aria-disabled="true"
            class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1 ui-button-isdisabled-cef1"
            tabindex="0"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              Refund €0.00
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    data-floating-ui-portal=""
    id=":r5:"
  />
  <div
    aria-describedby="modal-8-desc"
    aria-labelledby="modal-8-title"
    aria-modal="true"
    class="modal"
    role="dialog"
  >
    <div
      class="dialog small"
    >
      <div
        class="modalContent"
      >
        <div
          class="wrapper"
        >
          <div>
            <div
              class="title"
              id="modal-8-title"
            >
              Error
            </div>
            <div
              class="subtitle"
            />
          </div>
          <button
            aria-disabled="false"
            class="ui-button-wrapper-cef1 material-icons icon ui-iconbutton-wrapper-b819 ui-iconbutton-medium-b819 ui-button-ghost-cef1 ui-button-secondary-cef1"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                aria-hidden="true"
                class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-medium-e486 material-icons"
              >
                close
              </i>
            </span>
          </button>
        </div>
        <div
          class="wrapper"
          id="modal-8-desc"
        >
          The operation cannot be completed. You have too many queued requests at the moment. Please wait a moment and try again.
        </div>
        <div
          class="wrapper wrapper"
        >
          <div
            class="actions"
          >
            <div
              class="childWrapper"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-primary-cef1"
                type="button"
              >
                <span
                  class="ui-button-content-cef1"
                >
                  Got it
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
